@@ -54,6 +54,7 @@ endif
 
 CFLAGS_APP := \
 	-Wall -Wextra -Wno-unused-parameter -Wno-missing-field-initializers -Wno-implicit-fallthrough \
+	-Wno-stringop-overflow \
 	-I$(SRCDIR) -I$(FFBASE) -I$(FFAUDIO) -I$(FF) -I$(FFOS) -I$(FF3PT)
 CFLAGS := $(CFLAGS_STD) $(CFLAGS_DEBUG) $(CFLAGS_OPT) $(CFLAGS_OS) $(CFLAGS_CPU) $(CFLAGS_APP)
 # alternative optimization flags: no LTO
@@ -61,7 +62,7 @@ ifneq ($(OPT),0)
 	CFLAGS_OPT := -O3
 endif
 CFLAGS_ALTOPT := $(CFLAGS_STD) $(CFLAGS_DEBUG) $(CFLAGS_OPT) $(CFLAGS_OS) $(CFLAGS_CPU) $(CFLAGS_APP)
-LDFLAGS += -L$(FF3PTLIB) $(LD_LPTHREAD)
+LDFLAGS += -Wno-stringop-overflow -L$(FF3PTLIB) $(LD_LPTHREAD)
 ifeq ($(OS),bsd)
 	LDFLAGS += -lexecinfo
 endif
